helm/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: istio-system
  name: ingress
  labels:
    app: ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/subnets: subnet-52f93c29 , subnet-a89aabe5
    alb.ingress.kubernetes.io/load-balancer-name: "demo-cluster-istio-alb"
spec:
  rules:
    - http:
        paths:
        - path: /*
          pathType: ImplementationSpecific
          backend:
            service:
              name: istio-ingressgateway
              port:
                number: 80
